--- a/casualcrawlerparent/casualcrawler-datawriter/pom.xml
+++ b/casualcrawlerparent/casualcrawler-datawriter/pom.xml
@@ -25,13 +25,25 @@
             <version>8.0.15</version>
         </dependency>
 
-        <!--connection pool-->
         <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
 
     </dependencies>
 
