--- a/casualcrawlerparent/pom.xml
+++ b/casualcrawlerparent/pom.xml
@@ -30,10 +30,10 @@
         <dependencies>
 
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -46,6 +46,13 @@
                 <artifactId>spring-beans</artifactId>
                 <version>${springframework.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>junit</groupId>
