--- a/casualcrawler-parent/casualcrawler-pttcrawler/pom.xml
+++ b/casualcrawler-parent/casualcrawler-pttcrawler/pom.xml
@@ -42,6 +42,25 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.casualsource.casualcrawler</groupId>
+            <artifactId>casualcrawler-parser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.casualsource.casualcrawler</groupId>
+            <artifactId>casualcrawler-datawriter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
